<resources>
    <string name="app_name">Crab-Customer</string>
    <string name="app_quote">Your everyday everything app</string>
    <string name="login_title">Welcome! What’s your mobile number?</string>
    <string name="login_subtitle">With a valid number, you can access reides, deliceries, and our other services.</string>
    <string name="default_phone_number">987654321</string>
    <string name="otp_title">Enter the 6-digit code sent to</string>
    <string name="otp_question">Didn\'t receive it?</string>
    <string name="otp_resend">Request new code in 00:00</string>
    <string name="default_otp">000000</string>
    <string name="menu_item1">Home</string>
    <string name="menu_item2">History</string>
    <string name="menu_item3">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="google_map_key" templateMergeStrategy="preserve" translatable="false" >AIzaSyCyz0FsiHa0l6mRP1GQISgBVF27bgJb2-c</string>
</resources>