<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">

    <ImageView
        android:clickable="true"
        android:id="@+id/otp_backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/otp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_title"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/otp_backbtn"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/otp_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_phone_number"
        style="@style/title_1"
        app:layout_constraintTop_toBottomOf="@id/otp_title"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/otp_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        style="@style/title_1"
        android:hint="@string/default_otp"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/otp_subtitle"/>
    <TextView
        android:id="@+id/otp_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_question"
        app:layout_constraintBottom_toTopOf="@id/otp_resend"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/otp_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otp_resend"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/otp_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintTop_toBottomOf="@id/otp_phone_number"
        app:layout_constraintStart_toStartOf="parent"/>
    
</androidx.constraintlayout.widget.ConstraintLayout>