<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp">
    <ImageView
        android:clickable="true"
        android:id="@+id/login_backbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        style="@style/title_1"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/login_backbtn"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/login_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_subtitle"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.hbb20.CountryCodePicker
        android:id="@+id/login_country_code_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:ccp_showNameCode="false"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/login_phone_number"/>
    <EditText
        android:id="@+id/login_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/default_phone_number"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/login_subtitle"
        app:layout_constraintStart_toEndOf="@id/login_country_code_picker"/>
    <Button
        android:id="@+id/login_nextbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>